<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_corner_fill_all_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:includeFontPadding="false"
                android:text="@string/wristband_info_tip"
                android:textColor="#666666"
                android:textSize="10sp" />

            <View
                android:layout_width="39dp"
                android:layout_height="@dimen/line_size"
                android:layout_marginTop="8dp"
                android:background="#008cff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/example_patient_name"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="10.5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_male" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/example_bed_no"
                    android:textColor="#333333"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/example_patient_age"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/bed_list_keShi_content"
                    android:textColor="#666666"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/bed_list_his_no_head"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:includeFontPadding="false"
                    android:text="@string/example_patient_number"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/bed_list_level_head1_tip"
                    android:textColor="#666666"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="4dp"
                    android:layout_height="15dp"
                    android:background="@drawable/bg_corner_fill_all_blue_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:includeFontPadding="false"
                    android:text="@string/quick_message_tip"
                    android:textColor="#666666"
                    android:textSize="10sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_corner_fill_all_yellow"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/patient_info_title"
                android:textColor="#333333"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp">

                <TextView
                    android:layout_width="119dp"
                    android:layout_height="64dp"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/bg_corner_fill_all_yellow"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/medical_order_title"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="119dp"
                    android:layout_height="64dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_corner_fill_all_yellow"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/vital_sign_title"
                    android:textColor="#333333"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginTop="48dp"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@null"
            android:includeFontPadding="false"
            android:onClick="hideDialog"
            android:text="@string/action_close"
            android:textColor="#5daeff"
            android:textSize="10sp" />

    </LinearLayout>

</LinearLayout>
