<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EnterMedicalOrderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/custom_white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="9dp"
            android:background="@drawable/ic_back"
            android:onClick="backToList" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/medical_order_title"
            android:textColor="#333333"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#f9f9f9"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_size"
            android:background="@color/custom_white">

            <com.pan.nurseStation.widget.button.RoundButton
                android:id="@+id/success_button_bar"
                android:layout_width="133dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/scan_success_tip"
                android:textColor="@color/custom_white"
                android:textSize="10sp"
                android:visibility="invisible"
                app:background_color="#68ce99"
                app:corner_radius="14dp" />

            <TextView
                android:id="@+id/patient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:includeFontPadding="false"
                android:text="@string/example_patient_name"
                android:textColor="#333333"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/patient_sex"
                android:layout_width="10dp"
                android:layout_height="13dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/patient_name"
                android:background="@drawable/ic_male" />

            <TextView
                android:id="@+id/patient_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/patient_name"
                android:layout_marginStart="18dp"
                android:layout_marginTop="9dp"
                android:includeFontPadding="false"
                android:text="@string/example_patient_age"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/hos_number_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/patient_age"
                android:layout_marginStart="18dp"
                android:layout_marginTop="7dp"
                android:includeFontPadding="false"
                android:text="@string/bed_list_his_no_head"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/hos_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/patient_age"
                android:layout_marginTop="7dp"
                android:layout_toRightOf="@id/hos_number_head"
                android:includeFontPadding="false"
                android:text="@string/example_patient_number"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/department_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hos_number_head"
                android:layout_marginStart="18dp"
                android:layout_marginTop="7dp"
                android:includeFontPadding="false"
                android:text="@string/bed_list_keShi_content"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/bed_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hos_number_head"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="14dp"
                android:layout_toRightOf="@id/department_name"
                android:includeFontPadding="false"
                android:text="@string/example_bed_no"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="9dp"
                android:includeFontPadding="false"
                android:onClick="showInputDialog"
                android:text="@string/manual_input_tip"
                android:textColor="#999999"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/ic_scan" />

                <TextView
                    android:id="@+id/scan_success_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/scan_code_tip"
                    android:textColor="#3a9cff"
                    android:textSize="16sp" />
            </LinearLayout>


        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="@color/custom_white">

        <TextView
            android:id="@+id/warning_tip"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:text="@string/submit_warning_tip"
            android:textColor="#999999"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/quantity_head"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/warning_tip"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:text="@string/checked_quantity_head"
            android:textColor="#666666"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/quantity_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/warning_tip"
            android:layout_toRightOf="@id/quantity_head"
            android:gravity="center_vertical"
            android:text="@string/example_number_zero"
            android:textColor="#666666"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="126dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="29dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/bg_corner_fill_all_blue"
            android:onClick="submitQuantity"
            android:text="@string/action_submit"
            android:textColor="#fffefe"
            android:textSize="10sp" />

        <Button
            android:layout_width="81dp"
            android:layout_height="30dp"
            android:layout_marginTop="29dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/button_submit"
            android:background="@drawable/bg_corner_stroke_all_white"
            android:onClick="resetQuantity"
            android:text="@string/action_reload"
            android:textColor="#6a81a6"
            android:textSize="10sp" />

        <!--<com.pan.nurseStation.widget.button.RoundButton-->
        <!--android:id="@+id/button_submit"-->
        <!--android:layout_width="126dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginTop="29dp"-->
        <!--android:layout_marginRight="22dp"-->
        <!--android:text="@string/action_submit"-->
        <!--android:textColor="#fffefe"-->
        <!--android:textSize="10sp"-->
        <!--app:background_color="@color/custom_blue"-->
        <!--app:corner_radius="4dp" />-->

        <!--<com.pan.nurseStation.widget.button.RoundButton-->
        <!--android:layout_width="81dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_marginTop="29dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_toLeftOf="@id/button_submit"-->
        <!--android:background="@null"-->
        <!--android:text="@string/action_reload"-->
        <!--android:textColor="#6a81a6"-->
        <!--android:textSize="10sp" />-->


    </RelativeLayout>


</LinearLayout>