<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="103dp"
        android:layout_height="22dp"
        android:background="@drawable/bg_corner_fill_top_blue"
        android:text="@string/example_patient_no"
        android:textAlignment="center"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="103dp"
        android:layout_height="71dp"
        android:background="@color/custom_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:text="@string/example_patient_name"
                android:textColor="#333333"
                android:textSize="13sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="13dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_male" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="9dp"
            android:includeFontPadding="false"
            android:text="@string/example_patient_age"
            android:textColor="#666666"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="9dp"
            android:includeFontPadding="false"
            android:text="@string/example_patient_number"
            android:textColor="#666666"
            android:textSize="10sp" />
    </LinearLayout>


</LinearLayout>
