<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="134dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="89dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="18dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_man" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/login_username_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/_user_name"
            android:textColorHint="#ABABAB"
            android:textSize="10sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="233dp"
        android:layout_height="@dimen/line_size"
        android:background="#5e79a3"
        android:contentDescription="@string/todo" />


    <LinearLayout
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="23dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="18dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_lock" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/login_password_hint"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#ABABAB"
            android:textSize="10sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="233dp"
        android:layout_height="@dimen/line_size"
        android:background="#5e79a3"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="232dp"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="37dp"
        android:background="@drawable/bg_corner_stroke_all_white"
        android:text="@string/action_login"
        android:textColor="#5e73a5"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>